--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             </div>
         </div>
     </div>
-    <script src="/vue.js"></script>
-    <script src="/index.js"></script>
+    <script src="vue.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
